Change service and route handlers to use Mutiny